<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Button Names -->
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="decimal" translatable="false">.</string>
    <string name="equal" translatable="false">=</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="asterisk" translatable="false">x</string>
    <string name="divide" translatable="false">\u00f7</string>
    <string name="left_paran" translatable="false">(</string>
    <string name="right_paran" translatable="false">)</string>
    <string name="log_10" translatable="false">log</string>
    <string name="logn" translatable="false">ln</string>
    <string name="exponential" translatable="false">e</string>
    <string name="factorial" translatable="false">!</string>
    <string name="percentage" translatable="false">%</string>
    <string name="power" translatable="false">^</string>
    <string name="sqrt" translatable="false">\u221A</string>
    <string name="cbrt" translatable="false">\u00B3\u221A</string>
    <string name="pi" translatable="false">\u03C0</string>
    <string name="sin" translatable="false">sin</string>
    <string name="cos" translatable="false">cos</string>
    <string name="tan" translatable="false">tan</string>
    <string name="error">Error in Calculation</string>
    <string name="history">History</string>
    <string name="hexA" translatable="false">A</string>
    <string name="hexB" translatable="false">B</string>
    <string name="hexC" translatable="false">C</string>
    <string name="hexD" translatable="false">D</string>
    <string name="hexE" translatable="false">E</string>
    <string name="hexF" translatable="false">F</string>
    <string name="hex" translatable="false">Hex</string>
    <string name="dec" translatable="false">Decimal</string>
    <string name="octal" translatable="false">Octal</string>
    <string name="bin" translatable="false">Binary</string>

    <string-array name="modes">
        <item>Basic</item>
        <item>Advance</item>
        <item>Hex</item>
    </string-array>

    <string-array name="themes">
        <item>Default Light</item>
        <item>Default Dark</item>
        <item>Crimson Red</item>
        <item>Celadon Green</item>
        <item>Cerise Pink</item>
        <item>Palatinate Purple</item>
    </string-array>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="about">About</string>
    <string name="calc_about" translatable="false">JCalculator v 1.0.00</string>
    <string name="copyright">Inspired from the calculator by The CyanogenMod Project</string>
    <string name="actions">Actions</string>
    <string name="return_basic">Return to basic</string>
    <string name="return_basic_summary">Automatically return from Advance mode</string>
    <string name="vibrate">Vibrate on click</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="text_copied">Text copied</string>
    <string name="unit_used">Use unit</string>
    <string name="degree">Deg</string>
    <string name="radian">Rad</string>
    <string name="radian_used">Using Radians</string>
    <string name="degree_used">Using Degree</string>
</resources>
