<!-- Layout for Buttons -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- empty space Button -->
        <Button
            style="@style/Theme.Calculator.Empty"
         />

        <!-- Delete Button -->
        <Button
            android:id="@+id/delbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:longClickable="true"
            android:onClick="btnClick"
            android:text="@string/delete" />

        <!-- Clear Button -->
        <Button
            android:id="@+id/clearbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/clear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/hexA"
            android:text="@string/hexA"
            style="@style/Theme.Calculator.ButtonStyle" />
        <Button
            android:id="@+id/hexB"
            android:text="@string/hexB"
            style="@style/Theme.Calculator.ButtonStyle" />
        <Button
            android:id="@+id/hexC"
            android:text="@string/hexC"
            style="@style/Theme.Calculator.ButtonStyle" />
        <Button
            android:id="@+id/hexD"
            android:text="@string/hexD"
            style="@style/Theme.Calculator.ButtonStyle" />
        <Button
            android:id="@+id/hexE"
            android:text="@string/hexE"
            style="@style/Theme.Calculator.ButtonStyle" />
        <Button
            android:id="@+id/hexF"
            android:text="@string/hexF"
            style="@style/Theme.Calculator.ButtonStyle" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1">-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <!-- 1 Button -->
        <Button
            android:id="@+id/onebtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/one" />
        <!-- 2 Button -->
        <Button
            android:id="@+id/twobtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/two" />
        <!-- 3 Button -->
        <Button
            android:id="@+id/threebtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/three" />
        <!-- Minus Button -->
        <Button
            android:id="@+id/minusbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/minus" />

        <!-- Plus Button -->
        <Button
            android:id="@+id/plusbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <!-- 4 Button -->
        <Button
            android:id="@+id/fourbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/four" />
        <!-- 5 Button -->
        <Button
            android:id="@+id/fivebtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/five" />
        <!-- 6 Button -->
        <Button
            android:id="@+id/sixbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/six" />
        <!-- Multiply Button -->
        <Button
            android:id="@+id/multiplybtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/asterisk" />
        <!-- Divide Button -->
        <Button
            android:id="@+id/dividebtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <!-- 7 Button -->
        <Button
            android:id="@+id/sevenbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/seven" />

        <!-- 8 Button -->
        <Button
            android:id="@+id/eightbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/eight" />

        <!-- 9 Button -->
        <Button
            android:id="@+id/ninebtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/nine" />
        <!-- 0 Button -->
        <Button
            android:id="@+id/zerobtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/zero" />
        <!-- Equal Button -->
        <Button
            android:id="@+id/equalbtn"
            style="@style/Theme.Calculator.ButtonStyle"
            android:onClick="btnClick"
            android:text="@string/equal" />
    </LinearLayout>
</LinearLayout>

